# docling-flyers

./: .gitignore  .pre-commit-config.yaml  README.md  docling_default.py  docling_docs.py  docling_flyers.py  docling_granite_vision.py  docling_ocr.py  docling_vlm_vision.py  pyproject.toml  requirements.txt
output/: albert-cz.html  albert-cz.md  albert-en.html  albert-en.md  globus-cz.html  globus-cz.md  lidl-cz.html  lidl-cz.md  lidl-en.html  lidl-en.md  two-pager-cz-embedded.html  two-pager-cz-embedded.md  two-pager-cz.html  two-pager-cz.md
