[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-flyers"
version = "0.1.0"
description = "Docling Experiments"
readme = "README.md"
authors = [{ name = "Karel Piwko", email = "kpiwko@redhat.com" }]
license = {"text" = "Apache-2.0"}

[tool.autoflake]
exclude = ["build"]
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'

[tool.docformatter]
black = true
close-quotes-on-newline = true
exclude = ["build"]
recursive = true
wrap-descriptions = 79
wrap-summaries = 79

[tool.isort]
profile = "black"                               # black-compatible (e.g., trailing comma)
src_paths = ["."]
known_first_party = []  # use separate section for project sources
force_sort_within_sections = true               # don't separate import vs from
order_by_type = false                           # sort alphabetic regardless of case


[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
